# OpsConsole

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  security.yml  tray-build.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/app/: main.py
backend/app/api/: audit.py  auth.py  catalog.py  change_requests.py  content.py  device_auth.py  dto.py  github_webhook.py  health.py  health_api.py  internal_content.py  my.py  permissions.py
backend/scripts/: seed_allergyinsight.py
backend/tests/: conftest.py  test_auth.py  test_catalog_api.py  test_change_requests_api.py  test_content_api.py  test_device_auth.py  test_github_issue_builder.py  test_github_webhook.py  test_health.py  test_health_probe.py  test_manifest_fetcher.py  test_manifest_schema.py  test_manifest_sync.py  test_notify.py  test_p1_api.py  test_p5_security.py
docs/: README.md
docs/dev/: backup-restore.md  content-integration.md  database-init.sql  database-setup.md  github-bridge.md  operations.md  overview.md  owasp-checklist.md  quickstart.md  runbook.md  tray-build.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
tray/: README.md  index.html  package.json  vite.config.js
tray/src/: App.jsx  styles.css
tray/src-tauri/: Cargo.toml  tauri.conf.json
tray/src-tauri/capabilities/: default.json
tray/src-tauri/icons/: README.md
tray/src-tauri/src/: api_client.rs  lib.rs  main.rs  notifier.rs  tray.rs
(+62 files in other folders)
