[package]
name = "opsconsole-tray"
version = "0.0.1"
description = "OpsConsole tray agent — multi-service ops dashboard"
authors = ["bluevlad"]
license = "Internal"
edition = "2021"
rust-version = "1.77"

[lib]
name = "opsconsole_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-notification = "2.0.1"
tauri-plugin-shell = "2.0.2"
tauri-plugin-store = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
keyring = "3.6"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
